correct controls background width
Grey background of controls extended too far to the right, was out of line.  This should correct that.

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ canvas {
     padding: 20px;
     background-color: #f8f8f8;
     border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .editor .controls {
